Css fixes for iOS and some text overflow

--- a/style/less/style.less
+++ b/style/less/style.less
@@ -108,6 +108,10 @@ header {
 			width: 400px;
 			height: 400px;
 		}
+		@media @narrowtablet {
+			width: 300px;
+			height: 300px;
+		}
 		.center();
 	}
 	.text {
@@ -322,7 +326,6 @@ header {
 		.flex-wrap(nowrap);
 		flex-shrink: 0;
 		flex-basis: auto; /* default value */
-		min-width: 300px;
 		* {
 			white-space: normal;
 		}
@@ -335,12 +338,13 @@ header {
 			align-items: stretch;
 			//align-content:flex-start;
 			.flex-wrap(wrap);
-			width: 86vw;
+			min-width: 86vw;
 			margin: 2vw;
 			padding: 4vw;
 			border: 4px solid @color-black;
 			.border-radius(11px);
 			@media @tablet {
+				min-width: auto;
 				overflow-y: auto;
 				width: 31vw;
 				margin: 1vw;
@@ -377,7 +381,10 @@ header {
 				line-height: 150%;
 				width: 100%;
 				flex-basis: auto; /* default value */
-				min-width: 300px;
+				min-width: 82vw;
+				@media @smallmobile {
+					min-width: 275px;
+				}
 				@media @tablet {
 					min-width: auto;
 				}
